--- a/axure/test/files/用户注册界面/styles.css
+++ b/axure/test/files/用户注册界面/styles.css
@@ -2,8 +2,8 @@
   margin:0px;
   background-image:none;
   position:relative;
-  left:-194px;
-  width:456px;
+  left:-21px;
+  width:959px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -16,7 +16,37 @@
   position:absolute;
   z-index:0;
 }
-#u45_input {
+#u59_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:959px;
+  height:526px;
+}
+#u59 {
+  border-width:0px;
+  position:absolute;
+  left:21px;
+  top:0px;
+  width:959px;
+  height:526px;
+  display:flex;
+}
+#u59 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u59_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u60_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -35,7 +65,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u45_input.disabled {
+#u60_input.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -54,7 +84,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u45_div {
+#u60_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -72,7 +102,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u45 {
+#u60 {
   border-width:0px;
   position:absolute;
   left:350px;
@@ -81,14 +111,14 @@
   height:25px;
   display:flex;
 }
-#u45 .text {
+#u60 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u45_div.disabled {
+#u60_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -106,9 +136,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u45.disabled {
+#u60.disabled {
 }
-#u46_div {
+#u61_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -126,7 +156,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u46 {
+#u61 {
   border-width:0px;
   position:absolute;
   left:266px;
@@ -138,19 +168,19 @@
   font-weight:700;
   font-style:normal;
 }
-#u46 .text {
+#u61 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u46_text {
+#u61_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u47_input {
+#u62_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -169,7 +199,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u47_input.disabled {
+#u62_input.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -188,7 +218,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u47_div {
+#u62_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -206,7 +236,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u47 {
+#u62 {
   border-width:0px;
   position:absolute;
   left:350px;
@@ -215,14 +245,14 @@
   height:25px;
   display:flex;
 }
-#u47 .text {
+#u62 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u47_div.disabled {
+#u62_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -240,9 +270,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u47.disabled {
+#u62.disabled {
 }
-#u48_div {
+#u63_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -260,7 +290,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u48 {
+#u63 {
   border-width:0px;
   position:absolute;
   left:266px;
@@ -272,19 +302,19 @@
   font-weight:700;
   font-style:normal;
 }
-#u48 .text {
+#u63 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u48_text {
+#u63_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u49_input {
+#u64_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -303,7 +333,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u49_input.disabled {
+#u64_input.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -322,7 +352,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u49_div {
+#u64_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -340,7 +370,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u49 {
+#u64 {
   border-width:0px;
   position:absolute;
   left:350px;
@@ -349,14 +379,14 @@
   height:25px;
   display:flex;
 }
-#u49 .text {
+#u64 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u49_div.disabled {
+#u64_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -374,9 +404,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u49.disabled {
+#u64.disabled {
 }
-#u50_div {
+#u65_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -394,7 +424,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u50 {
+#u65 {
   border-width:0px;
   position:absolute;
   left:194px;
@@ -406,19 +436,19 @@
   font-weight:700;
   font-style:normal;
 }
-#u50 .text {
+#u65 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u50_text {
+#u65_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u51_div {
+#u66_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -436,23 +466,100 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u51 {
+#u66 {
   border-width:0px;
   position:absolute;
-  left:350px;
-  top:395px;
+  left:320px;
+  top:369px;
   width:140px;
   height:40px;
   display:flex;
 }
-#u51 .text {
+#u66 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u51_text {
+#u66_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u67_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u67 {
+  border-width:0px;
+  position:absolute;
+  left:530px;
+  top:369px;
+  width:140px;
+  height:40px;
+  display:flex;
+}
+#u67 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u67_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u68_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:958px;
+  height:30px;
+  background:inherit;
+  background-color:rgba(208, 225, 125, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  text-align:center;
+}
+#u68 {
+  border-width:0px;
+  position:absolute;
+  left:21px;
+  top:0px;
+  width:958px;
+  height:30px;
+  display:flex;
+  text-align:center;
+}
+#u68 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:10px 10px 10px 10px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u68_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
