--- a/axure/test/files/登录界面/styles.css
+++ b/axure/test/files/登录界面/styles.css
@@ -2,8 +2,8 @@
   margin:0px;
   background-image:none;
   position:relative;
-  left:-135px;
-  width:670px;
+  left:-21px;
+  width:952px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -16,7 +16,37 @@
   position:absolute;
   z-index:0;
 }
-#u38_div {
+#u50_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:952px;
+  height:534px;
+}
+#u50 {
+  border-width:0px;
+  position:absolute;
+  left:21px;
+  top:0px;
+  width:952px;
+  height:534px;
+  display:flex;
+}
+#u50 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u50_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u51_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -34,28 +64,28 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u38 {
+#u51 {
   border-width:0px;
   position:absolute;
-  left:400px;
-  top:350px;
+  left:427px;
+  top:356px;
   width:140px;
   height:40px;
   display:flex;
 }
-#u38 .text {
+#u51 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u38_text {
+#u51_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u39_div {
+#u52_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -73,28 +103,28 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u39 {
+#u52 {
   border-width:0px;
   position:absolute;
-  left:135px;
-  top:350px;
+  left:198px;
+  top:356px;
   width:140px;
   height:40px;
   display:flex;
 }
-#u39 .text {
+#u52 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u39_text {
+#u52_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u40_input {
+#u53_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -113,7 +143,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u40_input.disabled {
+#u53_input.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -132,7 +162,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u40_div {
+#u53_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -150,23 +180,23 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u40 {
+#u53 {
   border-width:0px;
   position:absolute;
   left:347px;
-  top:202px;
+  top:204px;
   width:300px;
   height:25px;
   display:flex;
 }
-#u40 .text {
+#u53 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u40_div.disabled {
+#u53_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -184,9 +214,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u40.disabled {
+#u53.disabled {
 }
-#u41_div {
+#u54_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -204,7 +234,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u41 {
+#u54 {
   border-width:0px;
   position:absolute;
   left:263px;
@@ -216,19 +246,19 @@
   font-weight:700;
   font-style:normal;
 }
-#u41 .text {
+#u54 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u41_text {
+#u54_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u42_input {
+#u55_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -247,7 +277,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u42_input.disabled {
+#u55_input.disabled {
   position:absolute;
   left:0px;
   top:0px;
@@ -266,7 +296,7 @@
   background-color:transparent;
   border-color:transparent;
 }
-#u42_div {
+#u55_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -284,7 +314,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u42 {
+#u55 {
   border-width:0px;
   position:absolute;
   left:347px;
@@ -293,14 +323,14 @@
   height:25px;
   display:flex;
 }
-#u42 .text {
+#u55 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u42_div.disabled {
+#u55_div.disabled {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -318,9 +348,9 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u42.disabled {
+#u55.disabled {
 }
-#u43_div {
+#u56_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -338,7 +368,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u43 {
+#u56 {
   border-width:0px;
   position:absolute;
   left:263px;
@@ -350,19 +380,19 @@
   font-weight:700;
   font-style:normal;
 }
-#u43 .text {
+#u56 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u43_text {
+#u56_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u44_div {
+#u57_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -380,23 +410,61 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u44 {
+#u57 {
   border-width:0px;
   position:absolute;
-  left:665px;
-  top:350px;
+  left:658px;
+  top:356px;
   width:140px;
   height:40px;
   display:flex;
 }
-#u44 .text {
+#u57 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u44_text {
+#u57_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u58_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:952px;
+  height:30px;
+  background:inherit;
+  background-color:rgba(208, 225, 125, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  text-align:center;
+}
+#u58 {
+  border-width:0px;
+  position:absolute;
+  left:21px;
+  top:0px;
+  width:952px;
+  height:30px;
+  display:flex;
+  text-align:center;
+}
+#u58 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:10px 10px 10px 10px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u58_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
