--- a/axure/test/files/管理员界面/styles.css
+++ b/axure/test/files/管理员界面/styles.css
@@ -2,8 +2,8 @@
   margin:0px;
   background-image:none;
   position:relative;
-  left:-342px;
-  width:430px;
+  left:0px;
+  width:959px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -16,7 +16,37 @@
   position:absolute;
   z-index:0;
 }
-#u23_div {
+#u29_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:959px;
+  height:667px;
+}
+#u29 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:959px;
+  height:667px;
+  display:flex;
+}
+#u29 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u29_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u30_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -34,28 +64,28 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u23 {
+#u30 {
   border-width:0px;
   position:absolute;
-  left:342px;
-  top:80px;
+  left:410px;
+  top:149px;
   width:140px;
   height:40px;
   display:flex;
 }
-#u23 .text {
+#u30 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u23_text {
+#u30_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u24_div {
+#u31_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -73,28 +103,28 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u24 {
+#u31 {
   border-width:0px;
   position:absolute;
-  left:342px;
-  top:180px;
+  left:410px;
+  top:229px;
   width:140px;
   height:39px;
   display:flex;
 }
-#u24 .text {
+#u31 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u24_text {
+#u31_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u25_div {
+#u32_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -112,28 +142,28 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u25 {
+#u32 {
   border-width:0px;
   position:absolute;
-  left:342px;
-  top:279px;
+  left:410px;
+  top:308px;
   width:140px;
   height:39px;
   display:flex;
 }
-#u25 .text {
+#u32 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u25_text {
+#u32_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u26_div {
+#u33_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -151,37 +181,37 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u26 {
+#u33 {
   border-width:0px;
   position:absolute;
-  left:342px;
-  top:378px;
+  left:410px;
+  top:382px;
   width:140px;
   height:39px;
   display:flex;
 }
-#u26 .text {
+#u33 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u26_text {
+#u33_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
 }
-#u27 {
+#u34 {
   border-width:0px;
   position:absolute;
-  left:262px;
-  top:442px;
+  left:330px;
+  top:455px;
   width:300px;
   height:170px;
   visibility:hidden;
 }
-#u27_state0 {
+#u34_state0 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -199,7 +229,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u27_state0_content {
+#u34_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -207,7 +237,7 @@
   width:1px;
   height:1px;
 }
-#u28 {
+#u35 {
   border-width:0px;
   position:absolute;
   left:114px;
@@ -216,7 +246,7 @@
   height:0px;
   font-size:25px;
 }
-#u28_seg0 {
+#u35_seg0 {
   border-width:0px;
   position:absolute;
   left:-5px;
@@ -224,7 +254,7 @@
   width:10px;
   height:7px;
 }
-#u28_seg1 {
+#u35_seg1 {
   border-width:0px;
   position:absolute;
   left:-5px;
@@ -232,7 +262,7 @@
   width:78px;
   height:10px;
 }
-#u28_text {
+#u35_text {
   border-width:0px;
   position:absolute;
   left:-14px;
@@ -241,7 +271,7 @@
   word-wrap:break-word;
   text-transform:none;
 }
-#u29_div {
+#u36_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -259,23 +289,61 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u29 {
+#u36 {
   border-width:0px;
   position:absolute;
-  left:632px;
-  top:80px;
+  left:410px;
+  top:70px;
   width:140px;
   height:40px;
   display:flex;
 }
-#u29 .text {
+#u36 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u29_text {
+#u36_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u37_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:959px;
+  height:30px;
+  background:inherit;
+  background-color:rgba(208, 225, 125, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  text-align:center;
+}
+#u37 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:959px;
+  height:30px;
+  display:flex;
+  text-align:center;
+}
+#u37 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:10px 10px 10px 10px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u37_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
