--- a/axure/test/files/统计图查看界面/styles.css
+++ b/axure/test/files/统计图查看界面/styles.css
@@ -2,8 +2,8 @@
   margin:0px;
   background-image:none;
   position:relative;
-  left:-12px;
-  width:1134px;
+  left:0px;
+  width:1185px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -16,15 +16,45 @@
   position:absolute;
   z-index:0;
 }
-#u19 {
+#u23_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1185px;
+  height:636px;
+}
+#u23 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1185px;
+  height:636px;
+  display:flex;
+}
+#u23 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u23_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+#u24 {
   border-width:0px;
   position:absolute;
   left:199px;
-  top:46px;
+  top:59px;
   width:943px;
   height:168px;
 }
-#u19_input {
+#u24_input {
   border-width:2px;
   position:absolute;
   left:0px;
@@ -33,7 +63,7 @@
   height:168px;
   overflow:auto;
 }
-#u20_div {
+#u25_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -51,11 +81,11 @@
   font-weight:700;
   font-style:normal;
 }
-#u20 {
+#u25 {
   border-width:0px;
   position:absolute;
-  left:12px;
-  top:121px;
+  left:28px;
+  top:127px;
   width:160px;
   height:37px;
   display:flex;
@@ -63,55 +93,55 @@
   font-weight:700;
   font-style:normal;
 }
-#u20 .text {
+#u25 .text {
   position:absolute;
   align-self:flex-start;
   padding:0px 0px 0px 0px;
   box-sizing:border-box;
   width:100%;
 }
-#u20_text {
+#u25_text {
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
 }
-#u21_img {
+#u26_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:408px;
-  height:353px;
+  width:433px;
+  height:248px;
 }
-#u21 {
+#u26 {
   border-width:0px;
   position:absolute;
   left:352px;
-  top:311px;
-  width:408px;
-  height:353px;
+  top:341px;
+  width:433px;
+  height:248px;
   display:flex;
 }
-#u21 .text {
+#u26 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u21_text {
+#u26_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
   visibility:hidden;
 }
-#u22_div {
+#u27_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:221px;
-  height:57px;
+  width:175px;
+  height:40px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -122,32 +152,64 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Arial Negreta', 'Arial Normal', 'Arial', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:32px;
+  font-size:18px;
 }
-#u22 {
+#u27 {
   border-width:0px;
   position:absolute;
-  left:458px;
-  top:244px;
-  width:221px;
-  height:57px;
+  left:481px;
+  top:269px;
+  width:175px;
+  height:40px;
   display:flex;
-  font-family:'Arial Negreta', 'Arial Normal', 'Arial', sans-serif;
-  font-weight:700;
-  font-style:normal;
-  font-size:32px;
+  font-size:18px;
 }
-#u22 .text {
+#u27 .text {
   position:absolute;
   align-self:center;
   padding:2px 2px 2px 2px;
   box-sizing:border-box;
   width:100%;
 }
-#u22_text {
+#u27_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+#u28_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1185px;
+  height:30px;
+  background:inherit;
+  background-color:rgba(208, 225, 125, 1);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow:5px 5px 5px rgba(0, 0, 0, 0.2);
+  text-align:center;
+}
+#u28 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1185px;
+  height:30px;
+  display:flex;
+  text-align:center;
+}
+#u28 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:10px 10px 10px 10px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u28_text {
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
